File.lastModifiedDate must return null if the modified time info is not available https://bugs.webkit.org/show_bug.cgi?id=87709

Reviewed by Kentaro Hara.

Source/WebCore:

Per File API spec, File.lastModifiedDate must return null if the
modified time info is not available.
http://dev.w3.org/2006/webapi/FileAPI/#dfn-lastModifiedDate

Test: http/tests/local/fileapi/file-last-modified-after-delete.html

* fileapi/File.cpp:
(WebCore::File::lastModifiedDateForBinding): Added.
(WebCore):
* fileapi/File.h:
(File):
* fileapi/File.idl: Added ImplementedAs=lastModifiedDateForBinding.

LayoutTests:

* http/tests/local/fileapi/file-last-modified-after-delete-expected.txt: Added.
* http/tests/local/fileapi/file-last-modified-after-delete.html: Added.
* http/tests/local/fileapi/resources/temp-file-utils.js: Added.
* http/tests/local/fileapi/script-tests/file-last-modified-after-delete.js: Added.
* http/tests/local/fileapi/script-tests/send-sliced-dragged-file.js: Factored out common temp-file related functions into temp-file-utils.js.
* http/tests/local/fileapi/send-sliced-dragged-file.html:


Canonical link: https://commits.webkit.org/105644@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118920 268f45cc-cd09-0410-ab3c-d52691b4dbfc